// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input validation error 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <div
      class="col"
    >
      <span>
        Errors
      </span>
      <ul>
        <li>
          #/properties: Property "message" does not match schema.
        </li>
        <li>
          #/properties/message/type: Instance type "object" is invalid. Expected "string", "number", "boolean".
        </li>
      </ul>
    </div>
    <div
      class="col"
    >
      <span>
        Rendered Args
      </span>
      <div
        class="root"
      >
        <ul
          style="border: 0px; padding: 0px; margin: 0.5em 0px 0.5em 0.125em; list-style: none; background-color: rgb(253, 255, 255);"
        >
          <li
            style="padding: 0px; margin: 0px;"
          >
            <ul
              style="padding: 0px; margin: 0px; list-style: none;"
            >
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(66, 122, 245); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    type:
                  </span>
                </label>
                <span
                  style="color: rgb(64, 175, 108);"
                >
                  "info"
                </span>
              </li>
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(66, 122, 245); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    duration:
                  </span>
                </label>
                <span
                  style="color: rgb(243, 100, 51);"
                >
                  2500
                </span>
              </li>
              <li
                style="position: relative; padding-top: 0.25em; margin-left: 0px; padding-left: 0px;"
              >
                <div
                  style="display: inline-block; padding-right: 0.5em; padding-left: 0px; cursor: pointer;"
                >
                  <div
                    style="margin-left: 0px; transition: 150ms; transform: rotateZ(0deg); transform-origin: 45% 50%; position: relative; line-height: 1.1em; font-size: 0.75em; color: rgb(66, 122, 245);"
                  >
                    ▶
                  </div>
                </div>
                <label
                  style="display: inline-block; color: rgb(66, 122, 245); margin: 0px; padding: 0px; cursor: pointer;"
                >
                  <span>
                    message:
                  </span>
                </label>
                <span
                  style="padding-left: 0.5em; cursor: default; color: rgb(64, 175, 108);"
                >
                  <span>
                    <span
                      style="margin-left: 0.3em; margin-right: 0.3em;"
                    >
                      {}
                    </span>
                     2 keys
                  </span>
                </span>
                <ul
                  style="padding: 0px; margin: 0px; list-style: none; display: block;"
                />
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="col"
    >
      <span>
        Schema
      </span>
      <div
        class="root"
      >
        <ul
          style="border: 0px; padding: 0px; margin: 0.5em 0px 0.5em 0.125em; list-style: none; background-color: rgb(253, 255, 255);"
        >
          <li
            style="padding: 0px; margin: 0px;"
          >
            <ul
              style="padding: 0px; margin: 0px; list-style: none;"
            >
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(66, 122, 245); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    $schema:
                  </span>
                </label>
                <span
                  style="color: rgb(64, 175, 108);"
                >
                  "https://json-schema.org/draft/2019-09/schema#"
                </span>
              </li>
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(66, 122, 245); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    type:
                  </span>
                </label>
                <span
                  style="color: rgb(64, 175, 108);"
                >
                  "object"
                </span>
              </li>
              <li
                style="position: relative; padding-top: 0.25em; margin-left: 0px; padding-left: 0px;"
              >
                <div
                  style="display: inline-block; padding-right: 0.5em; padding-left: 0px; cursor: pointer;"
                >
                  <div
                    style="margin-left: 0px; transition: 150ms; transform: rotateZ(0deg); transform-origin: 45% 50%; position: relative; line-height: 1.1em; font-size: 0.75em; color: rgb(66, 122, 245);"
                  >
                    ▶
                  </div>
                </div>
                <label
                  style="display: inline-block; color: rgb(66, 122, 245); margin: 0px; padding: 0px; cursor: pointer;"
                >
                  <span>
                    properties:
                  </span>
                </label>
                <span
                  style="padding-left: 0.5em; cursor: default; color: rgb(64, 175, 108);"
                >
                  <span>
                    <span
                      style="margin-left: 0.3em; margin-right: 0.3em;"
                    >
                      {}
                    </span>
                     3 keys
                  </span>
                </span>
                <ul
                  style="padding: 0px; margin: 0px; list-style: none; display: block;"
                />
              </li>
              <li
                style="position: relative; padding-top: 0.25em; margin-left: 0px; padding-left: 0px;"
              >
                <div
                  style="display: inline-block; padding-right: 0.5em; padding-left: 0px; cursor: pointer;"
                >
                  <div
                    style="margin-left: 0px; transition: 150ms; transform: rotateZ(0deg); transform-origin: 45% 50%; position: relative; line-height: 1.1em; font-size: 0.75em; color: rgb(66, 122, 245);"
                  >
                    ▶
                  </div>
                </div>
                <label
                  style="display: inline-block; color: rgb(66, 122, 245); margin: 0px; padding: 0px; cursor: pointer;"
                >
                  <span>
                    required:
                  </span>
                </label>
                <span
                  style="padding-left: 0.5em; cursor: default; color: rgb(64, 175, 108);"
                >
                  <span>
                    <span
                      style="margin-left: 0.3em; margin-right: 0.3em;"
                    >
                      []
                    </span>
                     1 item
                  </span>
                </span>
                <ul
                  style="padding: 0px; margin: 0px; list-style: none; display: block;"
                />
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Network error 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <div
      class="col"
    >
      <span>
        Response
      </span>
      <div
        class="text-warning"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-exclamation-triangle fa-w-18 "
          data-icon="exclamation-triangle"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 576 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            fill="currentColor"
          />
        </svg>
         PixieBrix does not have permission to access https://fail.com
      </div>
      <div>
        <div>
          PixieBrix did not receive a response. Possible causes:
        </div>
        <ul>
          <li>
            Your browser or another extension blocked the request. Check that PixieBrix has permission to the access the host. If PixieBrix is not showing a Grant Permissions button, ensure that the integration has an 
            <code
              class="px-0 mx-0"
            >
              isAvailable
            </code>
             section defined
          </li>
          <li>
            The remote server did not respond. Try the request again
          </li>
        </ul>
      </div>
    </div>
    <div
      class="col"
    >
      <span>
        Request Config
      </span>
      <div
        class="root"
      >
        <ul
          style="border: 0px; padding: 0px; margin: 0.5em 0px 0.5em 0.125em; list-style: none; background-color: rgb(253, 255, 255);"
        >
          <li
            style="padding: 0px; margin: 0px;"
          >
            <ul
              style="padding: 0px; margin: 0px; list-style: none;"
            >
              <li
                style="position: relative; padding-top: 0.25em; margin-left: 0px; padding-left: 0px;"
              >
                <div
                  style="display: inline-block; padding-right: 0.5em; padding-left: 0px; cursor: pointer;"
                >
                  <div
                    style="margin-left: 0px; transition: 150ms; transform: rotateZ(0deg); transform-origin: 45% 50%; position: relative; line-height: 1.1em; font-size: 0.75em; color: rgb(66, 122, 245);"
                  >
                    ▶
                  </div>
                </div>
                <label
                  style="display: inline-block; color: rgb(66, 122, 245); margin: 0px; padding: 0px; cursor: pointer;"
                >
                  <span>
                    transitional:
                  </span>
                </label>
                <span
                  style="padding-left: 0.5em; cursor: default; color: rgb(64, 175, 108);"
                >
                  <span>
                    <span
                      style="margin-left: 0.3em; margin-right: 0.3em;"
                    >
                      {}
                    </span>
                     3 keys
                  </span>
                </span>
                <ul
                  style="padding: 0px; margin: 0px; list-style: none; display: block;"
                />
              </li>
              <li
                style="position: relative; padding-top: 0.25em; margin-left: 0px; padding-left: 1.125em;"
              >
                <label
                  style="display: inline-block; color: rgb(66, 122, 245); margin: 0px; padding: 0px; cursor: default;"
                >
                  <span>
                    transformRequest:
                  </span>
                </label>
                <span
                  style="padding-left: 0.5em; cursor: default; color: rgb(64, 175, 108);"
                >
                  <span>
                    <span
                      style="margin-left: 0.3em; margin-right: 0.3em;"
                    >
                      []
                    </span>
                     0 items
                  </span>
                </span>
                <ul
                  style="padding: 0px; margin: 0px; list-style: none; display: block;"
                />
              </li>
              <li
                style="position: relative; padding-top: 0.25em; margin-left: 0px; padding-left: 1.125em;"
              >
                <label
                  style="display: inline-block; color: rgb(66, 122, 245); margin: 0px; padding: 0px; cursor: default;"
                >
                  <span>
                    transformResponse:
                  </span>
                </label>
                <span
                  style="padding-left: 0.5em; cursor: default; color: rgb(64, 175, 108);"
                >
                  <span>
                    <span
                      style="margin-left: 0.3em; margin-right: 0.3em;"
                    >
                      []
                    </span>
                     0 items
                  </span>
                </span>
                <ul
                  style="padding: 0px; margin: 0px; list-style: none; display: block;"
                />
              </li>
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(66, 122, 245); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    timeout:
                  </span>
                </label>
                <span
                  style="color: rgb(243, 100, 51);"
                >
                  0
                </span>
              </li>
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(66, 122, 245); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    xsrfCookieName:
                  </span>
                </label>
                <span
                  style="color: rgb(64, 175, 108);"
                >
                  "XSRF-TOKEN"
                </span>
              </li>
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(66, 122, 245); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    xsrfHeaderName:
                  </span>
                </label>
                <span
                  style="color: rgb(64, 175, 108);"
                >
                  "X-XSRF-TOKEN"
                </span>
              </li>
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(66, 122, 245); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    maxContentLength:
                  </span>
                </label>
                <span
                  style="color: rgb(243, 100, 51);"
                >
                  -1
                </span>
              </li>
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(66, 122, 245); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    maxBodyLength:
                  </span>
                </label>
                <span
                  style="color: rgb(243, 100, 51);"
                >
                  -1
                </span>
              </li>
              <li
                style="position: relative; padding-top: 0.25em; margin-left: 0px; padding-left: 0px;"
              >
                <div
                  style="display: inline-block; padding-right: 0.5em; padding-left: 0px; cursor: pointer;"
                >
                  <div
                    style="margin-left: 0px; transition: 150ms; transform: rotateZ(0deg); transform-origin: 45% 50%; position: relative; line-height: 1.1em; font-size: 0.75em; color: rgb(66, 122, 245);"
                  >
                    ▶
                  </div>
                </div>
                <label
                  style="display: inline-block; color: rgb(66, 122, 245); margin: 0px; padding: 0px; cursor: pointer;"
                >
                  <span>
                    headers:
                  </span>
                </label>
                <span
                  style="padding-left: 0.5em; cursor: default; color: rgb(64, 175, 108);"
                >
                  <span>
                    <span
                      style="margin-left: 0.3em; margin-right: 0.3em;"
                    >
                      {}
                    </span>
                     1 key
                  </span>
                </span>
                <ul
                  style="padding: 0px; margin: 0px; list-style: none; display: block;"
                />
              </li>
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(66, 122, 245); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    url:
                  </span>
                </label>
                <span
                  style="color: rgb(64, 175, 108);"
                >
                  "https://fail.com"
                </span>
              </li>
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(66, 122, 245); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    method:
                  </span>
                </label>
                <span
                  style="color: rgb(64, 175, 108);"
                >
                  "get"
                </span>
              </li>
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(66, 122, 245); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    data:
                  </span>
                </label>
                <span
                  style="color: rgb(241, 89, 80);"
                >
                  undefined
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Template render error 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <div
      class="col"
    >
      Template render error: (unknown path) [Line 1, Column 3]
  parseAggregate: expected colon after dict key
    </div>
  </div>
</DocumentFragment>
`;
